Fix RWD layout on mobile devices

--- a/35-show-local-weather/scss/style.scss
+++ b/35-show-local-weather/scss/style.scss
@@ -71,6 +71,10 @@ li {
     border-radius: $wrapper-radius;
     box-shadow: 0 3px 10px #CAD5DA;
     overflow: hidden;
+
+    @media only screen and (max-width: 768px) {
+        width: 80%;
+    }
 }
 
 /* ---------------------------------
